Prepares repo for values generation from template
started creating ray values template

Finalizes templates

Adds SYNTHO_LICENSE into default_settings

Finalizes changes to create a first RC version for testing purposes

--- a/helm/ray/templates/raycluster-storage.yaml
+++ b/helm/ray/templates/raycluster-storage.yaml
@@ -10,7 +10,7 @@ spec:
     requests:
       storage: 20Gi
 
-{{- if and (or (not .Values.storage.storageClassName) (eq .Values.storage.storageClassName "")) .Values.storage.pvLabelKey }}
+{{- if and (or (not .Values.storage.storageClassName) (eq .Values.storage.storageClassName "")) (not (or (not .Values.storage.pvLabelKey) (eq .Values.storage.pvLabelKey ""))) }}
   selector:
     matchLabels:
       pv-label-key: {{ .Values.storage.pvLabelKey }}
