--- a/helm/syntho-ui/templates/dbs/database-data-1-persistentvolumeclaim.yaml
+++ b/helm/syntho-ui/templates/dbs/database-data-1-persistentvolumeclaim.yaml
@@ -11,6 +11,12 @@ spec:
   resources:
     requests:
       storage: 100Mi
-  storageClassName: {{ .Values.db.storageClassName | default "default" }}
+{{- if and (or (not .Values.db.storageClassName) (eq .Values.db.storageClassName "")) (not (or (not .Values.db.pvLabelKey) (eq .Values.db.pvLabelKey ""))) }}
+  selector:
+    matchLabels:
+      pv-label-key: {{ .Values.db.pvLabelKey }}
+{{- else }}
+  storageClassName: {{ .Values.db.storageClassName }}
+{{- end }}
 status: {}
 {{- end }}
