--- a/helm/ray/templates/raycluster-storage.yaml
+++ b/helm/ray/templates/raycluster-storage.yaml
@@ -9,4 +9,11 @@ spec:
   resources:
     requests:
       storage: 20Gi
-  storageClassName: {{ .Values.storage.storageClassName | default "default" }}
+
+{{- if and (or (not .Values.storage.storageClassName) (eq .Values.storage.storageClassName "")) .Values.storage.pvLabelKey }}
+  selector:
+    matchLabels:
+      pv-label-key: {{ .Values.storage.pvLabelKey }}
+{{- else }}
+  storageClassName: {{ .Values.storage.storageClassName }}
+{{- end }}
