Adds rimage registry url into images.env

--- a/helm/config/images.env
+++ b/helm/config/images.env
@@ -1,3 +1,4 @@
+IMAGE_REGISTRY_SERVER=syntho.azurecr.io
 RAY_OPERATOR_IMG_REPO=syntho.azurecr.io/syntho-ray-operator
 RAY_OPEARATOR_IMG_TAG=latest
 RAY_IMAGE_IMG_REPO=syntho.azurecr.io/syntho-ray
