--- a/docker-compose/one-node-ray-syntho-ui/docker-compose.yaml
+++ b/docker-compose/one-node-ray-syntho-ui/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       RAY_ADDRESS: ${CORE_RAY_ADDRESS}
       PORT: ${CORE_PORT}
       LICENSE_KEY_SIGNED: ${LICENSE_KEY}
-      MAX_WORKERS: "${CORE_WORKERS:-4}"
+      MAX_WORKERS: "${CORE_WORKERS:-1}"
       REDIS_HOST: ${CORE_REDIS_HOST}
       REDIS_PORT: ${CORE_REDIS_PORT}
     # volumes:
@@ -77,6 +77,7 @@ services:
       DATA_ACCESS: ${BACKEND_DATA_ACCESS}
       RAY_URL: http://${CORE_RAY_ADDRESS}:8265
       EXTRA_ALLOWED_HOSTS: "backend ${FRONTEND_DOMAIN}"
+      WORKERS: "${BACKEND_WORKERS:-2}"
     ports:
       - "${BACKEND_PORT}:8000"
     depends_on:
