chore: update healtcheck and retries for docker compose

--- a/docker-compose/one-node-ray-syntho-ui/docker-compose.yaml
+++ b/docker-compose/one-node-ray-syntho-ui/docker-compose.yaml
@@ -25,14 +25,16 @@ services:
       test: wget --no-verbose --tries=1 -O /dev/null http://localhost:${CORE_PORT}/api/v1/status || exit 1
       interval: 5s
       timeout: 1s
-      retries: 30
+      retries: 2
     depends_on:
-      - redis
-      - postgres
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
 
   core_worker:
     image: ${CORE_IMAGE}
-    restart: on-failure
+    restart: always
     command: celery -A app.celery worker --loglevel=info
     environment:
       DATABASE_URL: "postgresql+asyncpg://${CORE_DATABASE_USER}:${CORE_DATABASE_PASSWORD}@${CORE_DATABASE_HOST}/${CORE_DATABASE_NAME}"
@@ -50,12 +52,14 @@ services:
     # Uncomment if volumes are required
     #  - /krb/krb5.conf:/etc/krb5.conf
     depends_on:
-      - redis
-      - postgres
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
 
   backend:
     image: ${BACKEND_IMAGE}
-    restart: on-failure
+    restart: always
     environment:
       FRONTEND_URL: ${FRONTEND_PROTOCOL}://${FRONTEND_HOST}
       SYNTHO_ENGINE_URL: http://core:${CORE_PORT}/api
@@ -83,14 +87,17 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     healthcheck:
       test: wget --no-verbose --tries=1 -O /dev/null http://backend:8000/api/docs/ || exit 1
       interval: 5s
       timeout: 1s
-      retries: 30
+      retries: 2
 
   worker:
     image: ${BACKEND_IMAGE}
+    restart: always
     entrypoint: [python, manage.py, subscriber]
     environment:
       FRONTEND_URL: ${FRONTEND_PROTOCOL}://${FRONTEND_HOST}
@@ -106,6 +113,11 @@ services:
       DB_USER: ${BACKEND_DB_USER}
       DB_PASSWORD: ${BACKEND_DB_PASSWORD}
       DB_PORT: ${BACKEND_DB_PORT}
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 
   frontend:
     image: ${FRONTEND_IMAGE}
@@ -143,6 +155,8 @@ services:
 
   redis:
     image: redis:6.2-alpine
+    healthcheck:
+      test: ["CMD", "redis-cli","ping"]
 
   head:
     image: ${RAY_IMAGE}
