--- a/docker-compose/one-node-ray-syntho-ui/docker-compose.yaml
+++ b/docker-compose/one-node-ray-syntho-ui/docker-compose.yaml
@@ -34,7 +34,7 @@ services:
 
   core_worker:
     image: ${CORE_IMAGE}
-    restart: always
+    restart: on-failure
     command: celery -A app.celery worker --loglevel=info
     environment:
       DATABASE_URL: "postgresql+asyncpg://${CORE_DATABASE_USER}:${CORE_DATABASE_PASSWORD}@${CORE_DATABASE_HOST}/${CORE_DATABASE_NAME}"
@@ -59,7 +59,7 @@ services:
 
   backend:
     image: ${BACKEND_IMAGE}
-    restart: always
+    restart: on-failure
     environment:
       FRONTEND_URL: ${FRONTEND_PROTOCOL}://${FRONTEND_HOST}
       SYNTHO_ENGINE_URL: http://core:${CORE_PORT}/api
@@ -97,7 +97,7 @@ services:
 
   worker:
     image: ${BACKEND_IMAGE}
-    restart: always
+    restart: on-failure
     entrypoint: [python, manage.py, subscriber]
     environment:
       FRONTEND_URL: ${FRONTEND_PROTOCOL}://${FRONTEND_HOST}
