--- a/docker-compose/one-node-ray-syntho-ui/docker-compose.yaml
+++ b/docker-compose/one-node-ray-syntho-ui/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       interval: 5s
       timeout: 1s
       retries: 2
+      start_period: 30s
     depends_on:
       redis:
         condition: service_healthy
@@ -94,6 +95,7 @@ services:
       interval: 5s
       timeout: 1s
       retries: 2
+      start_period: 30s
 
   worker:
     image: ${BACKEND_IMAGE}
