--- a/helm/config/images.env
+++ b/helm/config/images.env
@@ -9,3 +9,5 @@ SYNTHO_UI_BACKEND_IMG_REPO=syntho.azurecr.io/syntho-core-backend
 SYNTHO_UI_BACKEND_IMG_VER=0.30.0
 SYNTHO_UI_FRONTEND_IMG_REPO=syntho.azurecr.io/syntho-core-frontend
 SYNTHO_UI_FRONTEND_IMG_VER=1.26.0
+POSTGRES_IMG_REPO=syntho.azurecr.io/postgres
+POSTGRES_IMG_VER=latest
