docker images for redis and postgres are parameterized for consistency

--- a/docker-compose/one-node-ray-syntho-ui/example.env
+++ b/docker-compose/one-node-ray-syntho-ui/example.env
@@ -51,3 +51,6 @@ BACKEND_DATA_ACCESS=True
 # If CORE_APP_ENV is set to prod, CORE_RAY_ADDRESS cannot be empty
 # Set to dev for testing purposes
 CORE_APP_ENV=prod
+
+POSTGRES_IMAGE=postgres:14.5
+REDIS_IMAGE=redis:6.2-alpine
