--- a/docker-compose/one-node-ray-syntho-ui/docker-compose.yaml
+++ b/docker-compose/one-node-ray-syntho-ui/docker-compose.yaml
@@ -141,7 +141,7 @@ services:
       start_period: 60s
 
   postgres:
-    image: postgres:14.5
+    image: ${POSTGRES_IMAGE}
     ports:
       - "5432:5432"
     environment:
@@ -158,7 +158,7 @@ services:
       retries: 30
 
   redis:
-    image: redis:6.2-alpine
+    image: ${REDIS_IMAGE}
     healthcheck:
       test: ["CMD", "redis-cli","ping"]
 
