--- a/docker-compose/one-node-ray-syntho-ui/config/images.env
+++ b/docker-compose/one-node-ray-syntho-ui/config/images.env
@@ -2,8 +2,12 @@ IMAGE_REGISTRY_SERVER=syntho.azurecr.io
 RAY_IMAGE_IMG_REPO=syntho.azurecr.io/syntho-ray
 RAY_IMAGE_IMG_TAG=1.9.0-cpu
 SYNTHO_UI_CORE_IMG_REPO=syntho.azurecr.io/syntho-core-api
-SYNTHO_UI_CORE_IMG_VER=1.9.0
+SYNTHO_UI_CORE_IMG_TAG=1.9.0
 SYNTHO_UI_BACKEND_IMG_REPO=syntho.azurecr.io/syntho-core-backend
-SYNTHO_UI_BACKEND_IMG_VER=1.9.0
+SYNTHO_UI_BACKEND_IMG_TAG=1.9.0
 SYNTHO_UI_FRONTEND_IMG_REPO=syntho.azurecr.io/syntho-core-frontend
-SYNTHO_UI_FRONTEND_IMG_VER=1.9.0
+SYNTHO_UI_FRONTEND_IMG_TAG=1.9.0
+POSTGRES_IMG_REPO=postgres
+POSTGRES_IMG_TAG=14.5
+REDIS_IMG_REPO=redis
+REDIS_IMG_TAG=6.2-alpine
