fixes image discrepancies

--- a/docker-compose/one-node-ray-syntho-ui/config/images.env
+++ b/docker-compose/one-node-ray-syntho-ui/config/images.env
@@ -7,7 +7,7 @@ SYNTHO_UI_BACKEND_IMG_REPO=syntho.azurecr.io/syntho-core-backend
 SYNTHO_UI_BACKEND_IMG_TAG=1.9.0
 SYNTHO_UI_FRONTEND_IMG_REPO=syntho.azurecr.io/syntho-core-frontend
 SYNTHO_UI_FRONTEND_IMG_TAG=1.9.0
-POSTGRES_IMG_REPO=postgres
-POSTGRES_IMG_TAG=14.5
+POSTGRES_IMG_REPO=syntho.azurecr.io/postgres
+POSTGRES_IMG_TAG=latest
 REDIS_IMG_REPO=redis
-REDIS_IMG_TAG=6.2-alpine
+REDIS_IMG_TAG=7.2-rc2
