--- a/helm/syntho-ui/templates/frontend/frontend-deployment.yaml
+++ b/helm/syntho-ui/templates/frontend/frontend-deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - 'sh'
             - '-c'
             - |
-              until wget -q --spider --server-response --header "Host: {{ .Values.frontend_url }}" "http://{{ .Values.backend.name }}.syntho.svc.cluster.local/api/docs/" 2>&1 | grep -q "HTTP/1.1 200 OK"; do
+              until wget -q --spider --server-response --header "Host: {{ .Values.frontend_url }}" "http://{{ .Values.backend.name }}.{{ .Release.Namespace }}.svc.cluster.local/api/docs/" 2>&1 | grep -q "HTTP/1.1 200 OK"; do
                 echo "Waiting for the backend service to be ready..."
                 sleep 1
               done
@@ -38,9 +38,9 @@ spec:
             - name: PORT
               value: {{quote .Values.frontend.port}}
             - name: OPEN_API_URL
-              value: {{ .Values.backend.name }}.syntho.svc.cluster.local/api/playground/?format=openapi
+              value: {{ .Values.backend.name }}.{{ .Release.Namespace }}.svc.cluster.local/api/playground/?format=openapi
             - name: NEXT_PUBLIC_BACKEND_HOST
-              value: {{ .Values.backend.name }}.syntho.svc.cluster.local
+              value: {{ .Values.backend.name }}.{{ .Release.Namespace }}.svc.cluster.local
             - name: NEXT_PUBLIC_BACKEND_PROTOCOL
               value: http
             - name: NEXT_PUBLIC_BACKEND_WS_PROTOCOL
@@ -52,7 +52,7 @@ spec:
             - name: FRONTEND_PATH
               value: {{ .Values.frontend_path }}
             - name: BACKEND_HOST
-              value: {{ .Values.backend.name }}.syntho.svc.cluster.local
+              value: {{ .Values.backend.name }}.{{ .Release.Namespace }}.svc.cluster.local
           {{- if or $.Values.frontend.env $.Values.frontend.envSecrets }}
             {{- range $key, $value := $.Values.frontend.env }}
             - name: {{ $key }}
