--- a/helm/syntho-ui/templates/core/core-worker-pod.yaml
+++ b/helm/syntho-ui/templates/core/core-worker-pod.yaml
@@ -22,20 +22,28 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
+        {{- if .Values.core.SeperateWorkerImage  }}
+        - image: "{{ .Values.core.workerImage.repository }}:{{ .Values.core.workerImage.tag }}"
+        {{- else }}
         - image: "{{ .Values.core.image.repository }}:{{ .Values.core.image.tag }}"
+        {{- end}}
           env:
             - name: APP_ENV
               value: {{ .Values.core.app_env | default "prod" }}
             - name: DATABASE_URL
-              value: "postgresql+asyncpg://{{ .Values.core.db.username }}:{{ .Values.core.db.password }}@{{ .Values.core.db.host }}:{{ .Values.core.db.port | default "5432" }}/{{ .Values.core.db.name }}"
+              valueFrom:
+                secretKeyRef:
+                  name: core-secret
+                  key: core.database_url 
             - name: PORT
               value: {{quote .Values.core.port }}
             - name: SECRET_KEY
-              value: {{quote .Values.core.secret_key }}
+              valueFrom:
+                secretKeyRef:
+                  name: core-secret
+                  key: core.secret_key
             - name: WORKER_TIMEOUT
               value: "{{ .Values.core.worker_timeout | default "3000" }}"
-            - name: SECRET_KEY_2
-              value: {{quote .Values.core.secret_key }}
             - name: CELERY_BROKER_URL
               value:  "redis://{{ .Values.core.redis.host}}:{{ .Values.core.redis.port }}/{{ .Values.core.redis.db }}"
             - name: CELERY_RESULT_BACKEND
